--- a/build.gradle
+++ b/build.gradle
@@ -226,7 +226,7 @@ project.task(
         'getModulesManifest',
         group: GroupNames.DISTRIBUTION,
         description: "Creates a csv file with a list of the modules for each distribution. By default it will be " +
-                "placed in a directory called manifests in the root of this labkey installation. Specifiy another " +
+                "placed in a directory called manifests in the root of this labkey installation. Specify another " +
                 "directory by using \"-PmanifestDir\". The default file name is distributionModules.csv; specify " +
                 "another name using \"-PmanifestFileName\"."
 ).doLast({
