Enable createModule task (available with 0.9.7 of gradlePlugins)
SVN r51493 |2017-06-06 15:26:53 +0000

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,4 +1,4 @@
-//import org.labkey.gradle.task.CreateModule
+import org.labkey.gradle.task.CreateModule
 import org.labkey.gradle.util.BuildUtils
 
 BuildUtils.addLabKeyDependency(project: project, config: 'jars', depProjectPath: ":remoteapi:java", transitive: true)
@@ -83,9 +83,9 @@ project.jsDoc.paths = [
     "internal/webapp/vis/src"
 ]
 
-//task('createModule', type: CreateModule, group: "Module",
-//        description: "Creates a new module. Use moduleName property to specify the name of the module to be created. " +
-//                "Use moduleDestination to specify the full path to destination" +
-//                "Use createFiles to control which subdirectories are created.  Include some subset of api, test, and/or schema " +
-//                    "in a comma delimited list to create those subdirectories in the new module. If none are required, still " +
-//                    "include -PcreateFiles with no value to avoid being prompted." )
+task('createModule', type: CreateModule, group: "Module",
+        description: "Creates a new module. Use moduleName property to specify the name of the module to be created. " +
+                "Use moduleDestination to specify the full path to destination" +
+                "Use createFiles to control which subdirectories are created.  Include some subset of api, test, and/or schema " +
+                    "in a comma delimited list to create those subdirectories in the new module. If none are required, still " +
+                    "include -PcreateFiles with no value to avoid being prompted." )
