Issue 31711: Probably dont need picard.jar in LK dependencies cr: josh/susan
SVN r54018 |2017-09-25 19:53:04 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -48,6 +48,7 @@ commonsCodecVersion=1.6
 # the beanutils version is not the default version brought from commons-validator and/or commons-digetser
 # in the :server:api module but is required for some of our code to compile
 commonsBeanutilsVersion=1.7.0
+commonsCompressVersion=1.13
 commonsDbcpVersion=1.4
 commonsDiscoveryVersion=0.2
 commonsDigesterVersion=1.8.1
@@ -69,7 +70,7 @@ gwtDndVersion=3.2.0
 gwtServletVersion=2.5.1
 gxtVersion=2.2.5
 
-htsjdkVersion=2.8.1
+htsjdkVersion=2.11.0
 
 # httpclientVersion increased from 4.3.3 to match version brought in by fluent-hc in remoteapi
 httpclientVersion=4.5.3
@@ -115,8 +116,6 @@ opencsvVersion=2.3
 patriciaTrieVersion=0.6
 
 pdfboxVersion=2.0.4
-
-picardLibVersion=2.2.4
 
 poiVersion=3.15
 
