--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,4 @@
+import org.labkey.gradle.task.ShowDiscrepancies
 import org.labkey.gradle.util.BuildUtils
 import org.labkey.gradle.util.GroupNames
 
@@ -233,6 +234,12 @@ project.task("copyTagLibsBase",
             copy.include 'WEB-INF/*.tld'
             copy.include 'WEB-INF/tags/**'
         }
+)
+
+project.task("showDiscrepancies",
+                group: "Help",
+                type: ShowDiscrepancies,
+                description: "Report external dependencies that have more than one version referenced in the modules in this build"
 )
 
 project.task(
