--- a/gradle.properties
+++ b/gradle.properties
@@ -32,6 +32,11 @@ versioningPluginVersion=1.0.1
 # (internal, api, bootstrap, schemas, remoteapi). Other modules that
 # have extensive other external dependencies should have a local
 # gradle.properties file to declare these version numbers.
+
+# workflow (Activiti) and galaxyintegration bring in different versions of javax.activation:activation transitively, so
+# we force the later version
+activationVersion=1.1.1
+
 annotationsVersion=15.0
 
 batikVersion=1.7
@@ -42,9 +47,9 @@ bzipVersion=1.0
 
 cglibNodepVersion=2.2.3
 
+commonsCollectionsVersion=3.2.2
 commonsCollections4Version=4.1
-# this file contains versions of libraries that are shared across multiple modules
-commonsCodecVersion=1.6
+commonsCodecVersion=1.10
 # the beanutils version is not the default version brought from commons-validator and/or commons-digetser
 # in the :server:api module but is required for some of our code to compile
 commonsBeanutilsVersion=1.7.0
@@ -53,17 +58,30 @@ commonsDbcpVersion=1.4
 commonsDiscoveryVersion=0.2
 commonsDigesterVersion=1.8.1
 commonsFileuploadVersion=1.3.1
-commonsIoVersion=2.4
-commonsLang3Version=3.4
+commonsIoVersion=2.5
+commonsLangVersion=2.6
+commonsLang3Version=3.5
 commonsLoggingVersion=1.2
 commonsMath3Version=3.6.1
 commonsNetVersion=3.3
 commonsPoolVersion=1.6
 commonsValidatorVersion=1.5.0
 
+dom4jVersion=1.6.1
+
 ehcacheCoreVersion=2.6.8
 
 flyingsaucerVersion=R8
+
+
+googleApiServicesCalendarVersion=v3-rev255-1.22.0
+googleApiClientVersion=1.22.0
+googleHttpClientVersion=1.22.0
+googleOauthClientVersion=1.22.0
+
+# Cloud and SequenceAnalysis bring gson in as a transitive dependency.
+# We resolve to the later version here to keep things consistent
+gsonVersion=2.2.4
 
 guavaVersion=17.0
 gwtDndVersion=3.2.0
@@ -72,13 +90,13 @@ gxtVersion=2.2.5
 
 htsjdkVersion=2.11.0
 
-# httpclientVersion increased from 4.3.3 to match version brought in by fluent-hc in remoteapi
 httpclientVersion=4.5.3
 httpcoreVersion=4.4.6
 httpmimeVersion=4.5.3
 
-jacksonVersion=2.6.4
-jacksonAnnotationsVersion=2.6.0
+jacksonVersion=2.8.8
+jacksonAnnotationsVersion=2.8.4
+jacksonJaxrsBaseVersion=2.8.8
 
 jamaVersion=1.0.2
 
@@ -90,7 +108,7 @@ jfreechartVersion=1.0.14
 
 jmockVersion=2.6.0
 
-jodaTimeVersion=2.6
+jodaTimeVersion=2.8.1
 
 jsonSimpleVersion=1.1
 
@@ -100,7 +118,7 @@ jtidyVersion=r918
 
 junitVersion=4.12
 
-jxlVersion=2.6
+jxlVersion=2.6.3
 
 kaptchaVersion=2.3
 
@@ -134,8 +152,10 @@ servletApiVersion=3.0
 
 # this version is forced for compatibility with pipeline and tika
 slf4jLog4j12Version=1.7.5
+# this version is forced for compatibility with api, LDK, and workflow
+slf4jLog4jApiVersion=1.7.16
 
-springVersion=4.0.6.RELEASE
+springVersion=4.1.5.RELEASE
 
 sqliteJdbcVersion=3.7.2
 
@@ -144,9 +164,14 @@ thumbnailatorVersion=0.4.8
 # used for tika-core in API and tika-app in search
 tikaVersion=1.14
 
-validationApiVersion=1.0.0.GA
+validationApiVersion=1.1.0.Final
+
+# saml and query bring in different versions transitively; we force the later one
+xalanVersion=2.7.0
 
 xercesImplVersion=2.11.0
+
+xmlApisVersion=2.0.2
 
 xmlbeansVersion=2.5.0
 
