--- a/server/gradle.properties
+++ b/server/gradle.properties
@@ -1,3 +1,5 @@
 docflexXmlReVersion=1.7.2
 
+# the docflex version above requires the following xmlApisVersion, so we don't use the same version as
+# declared in the root-level gradle.properties
 xmlApisVersion=1.3.04
