second attempt to update gradle node plugin version
SVN r54994 |2017-11-09 23:43:39 +0000

--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,13 @@ buildscript {
     repositories {
         jcenter()
         maven {
-            url "${artifactory_contextUrl}/plugins-snapshot-local"
-        }
-        maven {
-            url "${artifactory_contextUrl}/plugins-release-local"
-        }
-        maven {
             url "${artifactory_contextUrl}/libs-release"
+        }
+        maven {
+            url "${artifactory_contextUrl}/plugins-release"
+        }
+        maven {
+            url "${artifactory_contextUrl}/plugins-snapshot-local"
         }
     }
     dependencies {
