--- a/gradle/settings/distributions.gradle
+++ b/gradle/settings/distributions.gradle
@@ -1,3 +1,24 @@
+buildscript {
+    repositories {
+        jcenter()
+        maven {
+            url "${artifactory_contextUrl}/libs-release"
+        }
+        maven {
+            url "${artifactory_contextUrl}/plugins-release"
+        }
+        maven {
+            url "${artifactory_contextUrl}/plugins-snapshot-local"
+        }
+    }
+    dependencies {
+        classpath "org.labkey.build:gradlePlugins:${gradlePluginsVersion}"
+    }
+    configurations.all {
+        // Check for updates every build for SNAPSHOT dependencies
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+    }
+}
 import org.labkey.gradle.util.BuildUtils
 
 apply from: 'all.gradle'
