--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,3 @@
-import org.labkey.gradle.util.BuildUtils
 
 buildscript {
     repositories {
@@ -7,7 +6,10 @@ buildscript {
             url "${artifactory_contextUrl}/libs-release"
         }
         maven {
-            url "${artifactory_contextUrl}/${gradlePluginsVersion.endsWith('SNAPSHOT') ? 'plugins-snapshot-local' : 'plugins-release-local'}"
+            url "${artifactory_contextUrl}/plugins-release"
+        }
+        maven {
+            url "${artifactory_contextUrl}/plugins-snapshot-local"
         }
     }
     dependencies {
@@ -19,6 +21,7 @@ buildscript {
     }
 }
 
+import org.labkey.gradle.util.BuildUtils
 /*
   This file is used to determine which projects will be configured during the Gradle build of LabKey Server.
 
