Make sure project directory exists before applying various plugins (settings file may include a project even if the directory doesn't exist and applying plugins can be expensive and may cause sparse artifacts to be generated).
SVN r55754 |2018-01-04 22:08:47 +0000

--- a/server/modules/build.gradle
+++ b/server/modules/build.gradle
@@ -2,7 +2,7 @@ import org.labkey.gradle.util.ModuleFinder
 
 subprojects {
   Project p ->
-    if (ModuleFinder.isPotentialModule(p))
+    if (p.projectDir.exists() && ModuleFinder.isPotentialModule(p))
     {
       apply plugin: 'java'
       apply plugin: 'org.labkey.module'
