Upgrade POI 3.15 -> 3.17, which involved a lot of int->enum migrations
Upgrade PDFBox 2.0.4 -> 2.0.8

In addition to the usual benefits of upgrading dependencies (stability and enhancements), this preps us for Tika 1.17 upgrade, which seems to be needed for Java 9 compatibility.

SVN r55876 |2018-01-11 18:02:46 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -135,9 +135,11 @@ opencsvVersion=2.3
 
 patriciaTrieVersion=0.6
 
-pdfboxVersion=2.0.4
+# sync with version Tika ships
+pdfboxVersion=2.0.8
 
-poiVersion=3.15
+# sync with version Tika ships
+poiVersion=3.17
 
 pollingWatchVersion=0.2.0
 
