Upgrade commons-compress 1.13 -> 1.14 (matches version shipped with Tika 1.17)
SVN r55933 |2018-01-16 04:59:16 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -53,7 +53,8 @@ commonsCodecVersion=1.10
 # the beanutils version is not the default version brought from commons-validator and/or commons-digetser
 # in the :server:api module but is required for some of our code to compile
 commonsBeanutilsVersion=1.7.0
-commonsCompressVersion=1.13
+# sync with version Tika ships
+commonsCompressVersion=1.14
 commonsDbcpVersion=1.4
 commonsDiscoveryVersion=0.2
 commonsDigesterVersion=1.8.1
