Fix TikaTestCase. Cloud module was pulling in a very old version of ASM (via jclouds->guice->cglib) that conflicted with the newer version of ASM jar in Search (one of the Tika parsers). Force the more recent ASM jar.
SVN r56119 |2018-01-25 01:38:11 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -39,6 +39,9 @@ activationVersion=1.1.1
 
 annotationsVersion=15.0
 
+# sync with version Tika ships. also used by jclouds->guice->cglib.
+asmVersion=5.0.4
+
 batikVersion=1.7
 
 bouncycastleVersion=1.54
