--- a/build.gradle
+++ b/build.gradle
@@ -217,7 +217,7 @@ allprojects {
                         substitute module('bouncycastle:bcmail-jdk15:138') with module("org.bouncycastle:bcpkix-jdk15on:${bouncycastleVersion}")
 
                         // Cloud module (jclouds->guice->cglib) wants asm-3.1.jar but search module (tika) wants asm-debug-all-5.0.4.jar.. so force to more recent, debug version
-                        substitute module('asm:asm') with module("org.ow2.asm:asm-debug-all:${asmVersion}")
+//                        substitute module('asm:asm') with module("org.ow2.asm:asm-debug-all:${asmVersion}")
                     }
                 }
             }
