Upgrade PostgreSQL JDBC driver 42.2.0 -> 42.2.1
SVN r56173 |2018-01-27 04:29:16 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+moduleSet=all
+ideaIncludeAllModules=true
 #org.gradle.parallel=true
 
 # the URL for the artifact repository where our build plugins are housed
@@ -149,7 +151,7 @@ poiVersion=3.17
 
 pollingWatchVersion=0.2.0
 
-postgresqlDriverVersion=42.2.0
+postgresqlDriverVersion=42.2.1
 
 quartzVersion=2.1.7
 
