Issue 33146: remove transitive dependency on xmlbeans from poi; we include a different version form api that has better encoding behavior
SVN r56367 |2018-02-07 15:42:26 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -183,6 +183,8 @@ xercesImplVersion=2.11.0
 
 xmlApisVersion=2.0.2
 
+# Issue 33146: We want 2.5.0 for now, even though it is not the latest. 2.6.0 (at least) introduces
+# some bad encoding behavior.
 xmlbeansVersion=2.5.0
 
 # Version 2.4.8a is a custom built version of YUICompressor.
