--- a/gradle.properties
+++ b/gradle.properties
@@ -181,7 +181,9 @@ xalanVersion=2.7.2
 
 xercesImplVersion=2.11.0
 
-xmlApisVersion=2.0.2
+# version 2.0.2 was relocated to xml-apis:xml-apis:1.0.b2, so we use 1.0.b2 here since later versions of Gradle don't support
+# using the relocated version
+xmlApisVersion=1.0.b2
 
 # Issue 33146: We want 2.5.0 for now, even though it is not the latest. 2.6.0 (at least) introduces
 # some bad encoding behavior.
