add the test distribution in the test directory
SVN r56737 |2018-03-01 03:15:52 +0000

--- a/gradle/settings/dist_repo.gradle
+++ b/gradle/settings/dist_repo.gradle
@@ -25,5 +25,6 @@ apply from: 'all.gradle'
 
 
 BuildUtils.includeModules(this.settings, rootDir, ["distributions"], [])
+include ":server:test:distribution"
 
 include ":remoteapi:sas"
