Give test distribution project more descriptive name and remove from git repo of distributions
SVN r56740 |2018-03-01 15:27:47 +0000

--- a/gradle/settings/dist_repo.gradle
+++ b/gradle/settings/dist_repo.gradle
@@ -25,6 +25,6 @@ apply from: 'all.gradle'
 
 
 BuildUtils.includeModules(this.settings, rootDir, ["distributions"], [])
-include ":server:test:distribution"
+include ":server:test:distributions:teamcity"
 
 include ":remoteapi:sas"
