--- a/gradle/settings/community.gradle
+++ b/gradle/settings/community.gradle
@@ -24,6 +24,9 @@ import org.labkey.gradle.util.BuildUtils
 BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR, BuildUtils.CUSTOM_MODULES_DIR], BuildUtils.EHR_MODULE_NAMES + ["ehr_billing", "wnprc_billing"])
 
 // include the test distribution, which is used to create an artifact for TeamCity to pass around to the agents
+include ":server:test:distributions:teamcity"
+include ":distributions:base"
+include ":distributions:community"
 include ":server:distributions:test"
 include ":server:distributions:base"
 include ":server:distributions:community"
