--- a/gradle/settings/premium.gradle
+++ b/gradle/settings/premium.gradle
@@ -43,4 +43,5 @@ include ':externalModules:RGLab:immport'
 BuildUtils.includeTestModules(this.settings, rootDir)
 
 // include the test distribution, which is used to create an artifact for TeamCity to pass around to the agents
+include ":server:test:distributions:teamcity"
 include ":server:distributions:test"
