--- a/gradle/settings/distributions.gradle
+++ b/gradle/settings/distributions.gradle
@@ -23,8 +23,8 @@ import org.labkey.gradle.util.BuildUtils
 
 apply from: 'all.gradle'
 
-BuildUtils.includeModules(this.settings, rootDir, ["server/distributions"], [])
-BuildUtils.includeModules(this.settings, rootDir, ["**/externalModules/**/distributions/*"], [])
-BuildUtils.includeModules(this.settings, rootDir, ["**/server/**/distributions/*"], [])
+
+BuildUtils.includeModules(this.settings, rootDir, ["distributions"], [])
+include ":server:test:distributions:teamcity"
 
 include ":remoteapi:sas"
