Move gwtVersion out to gradle.properties
SVN r57657 |2018-04-15 23:10:03 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -88,6 +88,11 @@ googleOauthClientVersion=1.23.0
 gsonVersion=2.2.4
 
 guavaVersion=17.0
+# Using version 2.4.0 of gwt_user and gwt_dev compiles, but it does not heed the
+# use of a single browser in dev mode, so we've published the versions of these
+# jar files that were in the file system.  Unfortunately, the version for these
+# is unknown.
+gwtVersion=unknown
 gwtDndVersion=3.2.0
 gwtServletVersion=2.8.2
 gxtVersion=2.2.5
