--- a/gradle/settings/all.gradle
+++ b/gradle/settings/all.gradle
@@ -28,24 +28,16 @@ import org.labkey.gradle.util.BuildUtils
   node in the tree with these leaves (e.g., 'server:modules:core' will create projects for ":server"
   ":server:modules" and ":server:modules:core").
  */
-// a set of directory names that correspond to modules to be excluded from configuration
-List<String> apiModules = ['labkey-api-js', 'labkey-api-r', 'labkey-api-python']
-List<String> excludedModules = ["movies"] + apiModules
-List<String> excludedExternalModules = ["nlp", "test"]
+List<String> excludedExternalModules = ["test"] // 'externalModules/scharp/test' is not a module
 
 // This line below inclues all modules in the server/modules, server/customModules and server/optionalModules directories
-BuildUtils.includeModules(this.settings, rootDir, BuildUtils.SERVER_MODULE_DIRS, excludedModules);
-// Hutch_abstraction has multiple modules within it
-BuildUtils.includeModules(this.settings, rootDir, ["server/optionalModules/hutch_abstraction"], excludedModules);
-//BuildUtils.includeModules(this.settings, rootDir, ["externalModules/maccoss"], excludedModules)
+BuildUtils.includeModules(this.settings, rootDir, BuildUtils.SERVER_MODULE_DIRS, []);
+//BuildUtils.includeModules(this.settings, rootDir, ["externalModules/maccoss"], [])
 
 // The line below includes all modules in the externalModules directory (except the ones indicates as to be excluded)
 BuildUtils.includeModules(this.settings, rootDir, BuildUtils.EXTERNAL_MODULE_DIRS, excludedExternalModules)
 // include the immport module singly
 include ':externalModules:RGLab:immport'
-
-// The line below will include the server/test project as well as the server/test/modules projects
-BuildUtils.includeTestModules(this.settings, rootDir)
 
 // include the test distribution, which is used to create an artifact for TeamCity to pass around to the agents
 include ":server:test:distributions:teamcity"
