34028 Add labkey-api-jdbc to the client-api distribution. Modify the test class to make it different from the SVN class.
SVN r58276 |2018-05-18 01:05:49 +0000

--- a/gradle/settings/premium.gradle
+++ b/gradle/settings/premium.gradle
@@ -36,3 +36,6 @@ include ':externalModules:RGLab:immport'
 
 // include the test distribution, which is used to create an artifact for TeamCity to pass around to the agents
 include ":server:test:distributions:teamcity"
+
+// include the jdbc api for testing on TeamCity.
+include ":remoteapi:labkey-api-jdbc"
