--- a/gradle/settings/all.gradle
+++ b/gradle/settings/all.gradle
@@ -45,4 +45,4 @@ include ":server:test:distributions:teamcity"
 
 // include the jdbc api for testing on TeamCity.
 // TODO Uncomment this line once the labkey-api-jdbc project has been merged into trunk.
-//include ":remoteapi:labkey-api-jdbc"
+include ":remoteapi:labkey-api-jdbc"
