--- a/gradle/settings/premium.gradle
+++ b/gradle/settings/premium.gradle
@@ -38,5 +38,5 @@ include ':externalModules:RGLab:immport'
 include ":server:test:distributions:teamcity"
 
 // include the jdbc api for testing on TeamCity.
-// TODO Uncomment this line once the labkey-api-jdbc project has been merged into trunk.
-include ":remoteapi:labkey-api-jdbc"
+if (project.findProject(":remoteapi:labkey-api-jdbc")  != null)
+    include ":remoteapi:labkey-api-jdbc"
