Comment out jdbc api in develop branch.
SVN r58385 |2018-05-24 21:45:38 +0000

--- a/gradle/settings/premium.gradle
+++ b/gradle/settings/premium.gradle
@@ -38,4 +38,4 @@ include ':externalModules:RGLab:immport'
 include ":server:test:distributions:teamcity"
 
 // include the jdbc api for testing on TeamCity.
-include ":remoteapi:labkey-api-jdbc"
+//include ":remoteapi:labkey-api-jdbc"
