--- a/gradle/settings/all.gradle
+++ b/gradle/settings/all.gradle
@@ -44,4 +44,4 @@ include ':externalModules:RGLab:immport'
 include ":server:test:distributions:teamcity"
 
 // include the jdbc api for testing on TeamCity.
-include ":remoteapi:labkey-api-jdbc"
+//include ":remoteapi:labkey-api-jdbc"
