Spec 34028 Conditional include for jdbc driver git project
SVN r58432 |2018-05-30 19:27:31 +0000

--- a/gradle/settings/premium.gradle
+++ b/gradle/settings/premium.gradle
@@ -38,4 +38,7 @@ include ':externalModules:RGLab:immport'
 include ":server:test:distributions:teamcity"
 
 // include the jdbc api for testing on TeamCity.
-//include ":remoteapi:labkey-api-jdbc"
+if (new File(getRootDir(), "remoteapi/labkey-api-jdbc").exists())
+{
+    include ":remoteapi:labkey-api-jdbc"
+}
