--- a/settings.gradle
+++ b/settings.gradle
@@ -79,17 +79,19 @@ else
     //List<String> excludedExternalModules = ["nlp", "test"] + excludedDISCVRModules
 
     // The line below includes all modules in the server/modules directory (except the ones indicated as to be excluded)
-    BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR], excludedModules);
+    BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.SERVER_MODULES_DIR], excludedModules)
+    // The line below includes all modules in the server/customModules directory
+    //BuildUtils.includeModules(this.settings, rootDir, [BuildUtils.CUSTOM_MODULES_DIR], [])
 
     // The line below includes all modules in the server/modules, server/customModules and server/optionalModules directories
-    //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.SERVER_MODULE_DIRS, excludedModules);
+    //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.SERVER_MODULE_DIRS, excludedModules)
 
     // The line below includes just the modules in the externalModules/RGLab directory
-    //BuildUtils.includeModules(this.settings, rootDir, ["externalModules/RGLab"], excludedExternalModules);
+    //BuildUtils.includeModules(this.settings, rootDir, ["externalModules/RGLab"], excludedExternalModules)
 
     // The line below includes all modules in the externalModules directory (except the ones indicates as to be excluded)
     // N.B. If you include the ehr module from server/customModules, you will need to include some modules from the externalModules directory as well
-    //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.EXTERNAL_MODULE_DIRS, excludedExternalModules);
+    //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.EXTERNAL_MODULE_DIRS, excludedExternalModules)
 
     // The line below includes only the external EHR modules
     //BuildUtils.includeModules(this.settings, rootDir, BuildUtils.EHR_EXTERNAL_MODULE_DIRS, excludedExternalModules)
@@ -100,6 +102,7 @@ else
     //                                         ":server:customModules:WNPRC_EHR",
     //                                         ":server:customModules:cnprc_ehr",
     //                                         ":server:customModules:snprc_ehr",
+    //                                         ":server:customModules:snd",
     //                                         ":server:customModules:ehr",
     //                                         ":server:customModules:onprc_ehr"])
 
