--- a/gradle.properties
+++ b/gradle.properties
@@ -92,6 +92,8 @@ gwtVersion=2.8.2
 gwtDndVersion=3.3.4
 gwtServletVersion=2.8.2
 gxtVersion=4.0.0
+# For dev builds, the targeted, single permutation browser. Can be either gwt-user-firefox, gwt-user-chrome, or gwt-user-ie
+gwtBrowser=gwt-user-chrome
 
 # Note: if changing this, we might need to match with the picard version in the SequenceAnalysis module build.gradle
 # It is also necessary to update SequenceAnalysisManager.htsjdkVersion
