Issue 34523: Specify an download particular versions of npm and node for building consistency
SVN r58647 |2018-06-13 21:27:14 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,10 @@ gradleNodePluginVersion=1.2.0
 gradlePluginsVersion=1.2.7
 versioningPluginVersion=1.0.1
 
+npmVersion=5.6.0
+nodeVersion=8.11.3
+nodeRepo=https://nodejs.org/dist
+
 # includeVcs = true
 
 # Version numbers for external libraries that we depend on
