--- a/gradle.properties
+++ b/gradle.properties
@@ -25,11 +25,15 @@ gradleNodePluginVersion=1.2.0
 gradlePluginsVersion=1.2.7
 versioningPluginVersion=1.0.1
 
+# Versions of node and npm to use during the build.  If set, these versions
+# will be downloaded and used.  If not set, the existing local installations will be used.
 npmVersion=5.6.0
 nodeVersion=8.11.3
 nodeRepo=https://nodejs.org/dist
 
-# includeVcs = true
+# uncomment the line below to include version number info in build artifacts
+# Generally you don't need or want to do this when developing.
+#includeVcs
 
 # Version numbers for external libraries that we depend on
 # These are the libraries that are used by our "base" modules
