move parameters into separate file in settings directory
SVN r58666 |2018-06-14 16:55:56 +0000

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,13 +21,7 @@ buildscript {
     }
 }
 
-// Parameterize the paths for these projects as they are used in our build logic
-// but, because they are non-standard, are likely to change as we move from SVN to Git
-gradle.ext.apiProjectPath=":server:api"
-gradle.ext.bootstrapProjectPath=":server:bootstrap"
-gradle.ext.internalProjectPath=":server:internal"
-gradle.ext.remoteApiProjectPath=":remoteapi:java"
-gradle.ext.schemasProjectPath=":schemas" // if schemas gets disbanded into separate repositories, this likely changes to :server:api
+apply from: 'gradle/settings/parameters.gradle'
 
 import org.labkey.gradle.util.BuildUtils
 /*
