Issue 34523: Add parameters for working directories for npm and node; - Add task to create symbolic link to core module's npm directory for easier inclusion in path
SVN r58667 |2018-06-14 17:00:28 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -30,6 +30,10 @@ versioningPluginVersion=1.0.1
 npmVersion=5.6.0
 nodeVersion=8.11.3
 nodeRepo=https://nodejs.org/dist
+# Directory in a project's build directory where the node binary will be placed
+nodeWorkDirectory=.node
+# Directory in a project's build directory where the npm binary will be placed
+npmWorkDirectory=.node
 
 # uncomment the line below to include version number info in build artifacts
 # Generally you don't need or want to do this when developing.
