Conditionally include plugins-snapshot-local as maven repository
SVN r58749 |2018-06-19 18:58:27 +0000

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,8 +8,10 @@ buildscript {
         maven {
             url "${artifactory_contextUrl}/plugins-release"
         }
-        maven {
-            url "${artifactory_contextUrl}/plugins-snapshot-local"
+        if (gradlePluginsVersion.contains("SNAPSHOT")) {
+            maven {
+                url "${artifactory_contextUrl}/plugins-snapshot-local"
+            }
         }
     }
     dependencies {
