--- a/build.gradle
+++ b/build.gradle
@@ -11,8 +11,12 @@ buildscript {
         maven {
             url "${artifactory_contextUrl}/plugins-release"
         }
-        maven {
-            url "${artifactory_contextUrl}/plugins-snapshot-local"
+        if (gradlePluginsVersion.contains("SNAPSHOT"))
+        {
+            maven {
+                url "${artifactory_contextUrl}/plugins-snapshot-local"
+            }
+
         }
     }
     dependencies {
