--- a/gradle/settings/all.gradle
+++ b/gradle/settings/all.gradle
@@ -7,8 +7,12 @@ buildscript {
         maven {
             url "${artifactory_contextUrl}/plugins-release"
         }
-        maven {
-            url "${artifactory_contextUrl}/plugins-snapshot-local"
+        if (gradlePluginsVersion.contains("SNAPSHOT"))
+        {
+            maven {
+                url "${artifactory_contextUrl}/plugins-snapshot-local"
+            }
+
         }
     }
     dependencies {
