Upgrade PostgreSQL JDBC driver 42.2.2 -> 42.2.4
Add a couple commented out lines to gradle.properties for convenience

Fix typo in QueryTestCase

SVN r59226 |2018-07-16 06:38:49 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
+#moduleSet=all
+#ideaIncludeAllModules=true
 #org.gradle.parallel=true
 
 # the URL for the artifact repository where our build plugins are housed
@@ -65,7 +67,7 @@ cglibNodepVersion=2.2.3
 commonsCollectionsVersion=3.2.2
 commonsCollections4Version=4.1
 commonsCodecVersion=1.10
-# the beanutils version is not the default version brought from commons-validator and/or commons-digetser
+# the beanutils version is not the default version brought from commons-validator and/or commons-digester
 # in the :server:api module but is required for some of our code to compile
 commonsBeanutilsVersion=1.7.0
 # sync with version Tika ships
@@ -164,7 +166,7 @@ poiVersion=3.17
 
 pollingWatchVersion=0.2.0
 
-postgresqlDriverVersion=42.2.2
+postgresqlDriverVersion=42.2.4
 
 quartzVersion=2.1.7
 
