Update activation version comment
SVN r59260 |2018-07-17 16:40:14 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -47,8 +47,8 @@ npmWorkDirectory=.node
 # have extensive other external dependencies should have a local
 # gradle.properties file to declare these version numbers.
 
-# workflow (Activiti) and galaxyintegration bring in different versions of javax.activation:activation transitively, so
-# we force the later version
+# workflow (Activiti), galaxyintegration, and javax.mail bring in different versions of javax.activation:activation transitively, so
+# we force the latest version
 activationVersion=1.2.0
 
 annotationsVersion=15.0
