Java 10 compatibility: Add explicit JAXB dependency to a couple git modules, since it's no longer present in Java 10.
SVN r59615 |2018-08-05 00:47:56 +0000

--- a/gradle.properties
+++ b/gradle.properties
@@ -125,6 +125,9 @@ jamaVersion=1.0.2
 
 javaxMailVersion=1.6.1
 
+# No longer part of Java 10. Dependency for NIHS and OpenEMPI.
+jaxbVersion=2.3.0
+
 jaxrpcVersion=1.1
 
 jclOverSlf4jVersion=1.7.6
